--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,7 +10,7 @@
                     <li>
                         <a target="_blank" href="https://www.zhihu.com/people/{{ site.zhihu_username }}">
                             <span>
-                                <i><img src="../img/ic_zhihu.png"   height="40" width="40"/></i>
+                                <i><img src="./img/ic_zhihu.png"   height="40" width="40"/></i>
                             </span>
                         </a>
                     </li>
@@ -19,7 +19,7 @@
                     <li>
                         <a target="_blank" href="http://weibo.com/{{ site.weibo_username }}">
                             <span>
-                                <i><img src="../img/ic_weibo.png"   height="40" width="40"/></i>
+                                <i><img src="./img/ic_weibo.png"   height="40" width="40"/></i>
                             </span>
                         </a>
                     </li>
@@ -29,7 +29,7 @@
                     <li>
                         <a target="_blank" href="https://github.com/{{ site.github_username }}">
                             <span>
-                                <i ><img src="../img/ic_github.png"   height="40" width="40"/></i>
+                                <i ><img src="./img/ic_github.png"   height="40" width="40"/></i>
                             </span>
                         </a>
                     </li>
